# VideoCapture

./: CMakeLists.txt  FFmpegVideoRecorderProcess.cpp  FFmpegVideoRecorderProcess.h  README.md  opengl_functions.h
